src/objects/Client_Value_Proposition_del__c.object
<CustomObject>
    <fields>
        <fullName>AP_Time_Invested__c</fullName>
        <label>AP Time Invested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Value Propositions</relationshipLabel>
        <relationshipName>Client_Value_Propositions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVP_Category__c</fullName>
        <label>CVP Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Audit Error</fullName>
                </value>
                <value>
                    <fullName>Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Cost Negotiation</fullName>
                </value>
                <value>
                    <fullName>Experiential</fullName>
                </value>
                <value>
                    <fullName>Perks &amp; Incentives</fullName>
                </value>
                <value>
                    <fullName>Risk Reduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVP_Date__c</fullName>
        <label>CVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CVP_Description__c</fullName>
        <label>CVP Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CVP_Savings__c</fullName>
        <label>CVP Savings $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Time_Saved__c</fullName>
        <label>Client Time Saved</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Value Propositions</relationshipLabel>
        <relationshipName>Client_Value_Propositions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Impact__c</fullName>
        <label>Research Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Impact__c</fullName>
        <label>Transaction Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trip_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip Manager #</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Client Value Propositions</relationshipLabel>
        <relationshipName>Client_Value_Propositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip_s_Impact_Billing__c</fullName>
        <label>Trip(s) Impact Billing</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_s_Impact_Safety__c</fullName>
        <label>Trip(s) Impact Safety</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trip_s_Impact_Service__c</fullName>
        <label>Trip(s) Impact Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Savings__c</fullName>
        <label>Type of Savings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Theoretical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client Value Proposition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account__c</columns>
        <columns>CVP_Category__c</columns>
        <columns>CVP_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CVP-{000000}</displayFormat>
        <label>CVP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Value Propositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>